Fix mobile menu spacing and add highlighting

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,10 +68,10 @@ img {
     }
     
     .menuPages{
+        margin:0px;
         vertical-align:middle;
-        text-align:left;;
+        text-align:left;
         width:100%;
-        padding:5px;
         display:none;
     }
     
@@ -79,7 +79,7 @@ img {
         line-height:30px;
         margin-right:0px;
         margin-left:0px;
-        padding:0px 0px 0px 5px;
+        padding:0px 5px 0px 5px;
         font-size:18px;
         vertical-align:middle;
     }
@@ -145,10 +145,6 @@ img {
         font-size:18px;
         vertical-align:middle;
     }
-    
-    .menuOption:hover{
-        background-color:grey;
-    }
 
     .contactOptions{
         display:inline-block;
@@ -168,6 +164,10 @@ img {
     .colon{
         display:inline-block;
     }
+}
+    
+.menuOption:hover{
+    background-color:grey;
 }
 
 .contactHeader{
